Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10714

Intermittent DCHECK(read_iter->read_page_->attached_to_output_batch) in tests

    XMLWordPrintableJSON

Details

    • ghx-label-10

    Description

      TestSpillingDebugActionDimensions::test_spilling_large_rows hit DCHECK in exhaustive build.

      The Impala git hash was: e11237e29 IMPALA-10197: Add KUDU_REPLICA_SELECTION query option

      In impalad.FATAL:

      F0525 12:45:49.307780 13122 buffered-tuple-stream.cc:531] 564af337ca503984:f1209fc400000000] Check failed: read_iter->read_page_->attached_to_output_batch
      

      Query 564af337ca503984:f1209fc400000000 was:

      I0525 12:45:48.474383 17878 impala-server.cc:1324] 564af337ca503984:f1209fc400000000] Registered query query_id=564af337ca503984:f1209fc400000000 session_id=9e4875c17adf5e7a:eb72d33dc39b5288
      I0525 12:45:48.474486 17878 Frontend.java:1618] 564af337ca503984:f1209fc400000000] Analyzing query: select group_concat(string_col), length(bigstr) from bigstrs2
      group by bigstr db: test_spilling_large_rows_119f6bb1
      

      I couldn't reproduce the issue locally.

       

       

      be/src/runtime/buffered-tuple-stream.cc:531
      530 DCHECK_NE(&*read_iter->read_page_, write_page_);
       531 DCHECK(read_iter->read_page_->attached_to_output_batch);
       532 pages_.pop_front();
      

       

      Attachments

        Issue Links

          Activity

            People

              rizaon Riza Suminto
              boroknagyz Zoltán Borók-Nagy
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: